--- a/FFMpegCore.WebApi/wwwroot/partials/sidebar.html
+++ b/FFMpegCore.WebApi/wwwroot/partials/sidebar.html
@@ -1,22 +1,21 @@
 ﻿<section class="sidebar">
     <nav>
         <h2>Menu</h2>
-        <a href="/dashboard.html" class="active">Dashboard</a>
-        <a href="/joblogs.html">Job Logs</a>
-        <a href="/renderlogs.html">Render Logs</a>
-        <a href="/settings.html">Settings</a>
-        <a href="/api-status.html">Api Status.</a>
+        <ul>
+            <li><a href="/dashboard.html">Dashboard</a></li>
+            <li><a href="/joblogs.html">Job Logs</a></li>
+            <li><a href="/renderlogs.html">Render Logs</a></li>
+            <li><a href="/settings.html">Settings</a></li>
+            <li><a href="/login.html" id="logoutLink">Logout</a></li>
+        </ul>
     </nav>
-    <hr />
-    <h2>User Detail</h2>
-    <div id="sharedUserDetails" class="user-details">
-        <!-- User details will be dynamically loaded here -->
-    </div>
 </section>
+
 <script>// Dynamically load the login details partial
     async function loadUserDetails() {
         const response = await fetch("./login-details.html");
         const html = await response.text();
         document.getElementById("sharedUserDetails").innerHTML = html;
     }
+
     loadUserDetails();</script>
