--- a/FFMpegCore.WebApi/wwwroot/css/styles.css
+++ b/FFMpegCore.WebApi/wwwroot/css/styles.css
@@ -21,22 +21,16 @@ main {
 }
 
 /* sidebar */
-#sidebar {
+#sidebar-container{
     width: 250px;
+}
+#sidebar {
     background-color: #f4f4f4;
     padding: 15px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     position: fixed;
     height: 100%;
     overflow-y: auto;
-}
-
-.user-details {
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #ffffff;
 }
 
 nav a {
@@ -48,14 +42,14 @@ nav a {
     margin-bottom: 5px;
 }
 
-    nav a:hover {
-        background-color: #ddd;
-    }
+nav a:hover {
+    background-color: #ddd;
+}
 
-    nav a.active {
-        background-color: #007bff;
-        color: white;
-    }
+nav a.active {
+    background-color: #007bff;
+    color: white;
+}
 
 /* Content Styling */
 .content {
@@ -86,9 +80,9 @@ button {
     border-radius: 5px;
 }
 
-    button:hover {
-        background-color: #0056b3;
-    }
+button:hover {
+    background-color: #0056b3;
+}
 
 progress {
     width: 100%;
@@ -205,6 +199,36 @@ caption {
 .no-parameters {
     font-style: italic;
     color: #999;
+}
+
+/* Login Detail */
+.user-details {
+display: flex;
+justify-content: space-between;
+align-items: center;
+background-color: #f4f4f4;
+padding: 10px;
+border: 1px solid #ccc;
+border-radius: 5px;
+margin-bottom: 10px;
+}
+
+.user-details p {
+    margin: 0;
+    font-size: 16px;
+}
+
+#logoutButton {
+background-color: #ff4d4d;
+color: white;
+border: none;
+padding: 5px 10px;
+cursor: pointer;
+border-radius: 3px;
+}
+
+#logoutButton:hover {
+    background-color: #ff1a1a;
 }
 /* Responsive Table */
 @media (max-width: 768px) {
