--- a/FFMpegCore.WebApi/wwwroot/partials/sidebar.html
+++ b/FFMpegCore.WebApi/wwwroot/partials/sidebar.html
@@ -6,6 +6,7 @@
             <li><a href="/joblogs.html">Job Logs</a></li>
             <li><a href="/renderlogs.html">Render Logs</a></li>
             <li><a href="/settings.html">Settings</a></li>
+            <li><a href="/upload.html">Upload</a></li>
             <li><a href="/login.html" id="logoutLink">Logout</a></li>
         </ul>
     </nav>
